tests/compile-fail/super_trait_not_implemented.stderr
error[E0277]: the trait bound `std::boxed::Box<Dog>: Supi` is not satisfied
  --> $DIR/super_trait_not_implemented.rs:18:5
   |
18 |     requires_foo(Box::new(Dog)); // shouldn't, because `Box<Dog>: Supi` is not satisfied
   |     ^^^^^^^^^^^^ the trait `Supi` is not implemented for `std::boxed::Box<Dog>`
   |
   = note: required because of the requirements on the impl of `Foo` for `std::boxed::Box<Dog>`
note: required by `requires_foo`
  --> $DIR/super_trait_not_implemented.rs:14:1
   |
14 | fn requires_foo<T: Foo>(_: T) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
